--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "@types/react-router-dom": "^5.3.3",
         "@types/styled-components": "^5.1.34",
         "nodemon": "^3.0.2",
+        "prettier": "3.2.5",
         "react-router-dom": "^6.22.1",
         "typescript": "~4.1.5"
     }
