--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -15,6 +15,9 @@
     "lib": ["es2021"],
     "extends": "./tsconfig.json",
     "include": ["./server/**/*.ts", "./shared/**/*.ts"],
+    "exclude": [
+        "node_modules"
+    ],
     "references": [
         {
             "path": "./shared",
