Install and run prettier with default settings

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -9,15 +9,13 @@
         "noEmit": false,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
-        "strict": true ,
+        "strict": true,
         "skipLibCheck": true
     },
     "lib": ["es2021"],
     "extends": "./tsconfig.json",
     "include": ["./server/**/*.ts", "./shared/**/*.ts"],
-    "exclude": [
-        "node_modules"
-    ],
+    "exclude": ["node_modules"],
     "references": [
         {
             "path": "./shared",
