--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "build:launch": "serve -s -d build -l 80",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "server:start": "tsc --project tsconfig.server.json && node build-server/index.js",
-        "server:build": "tsc --project tsconfig.server.json",
+        "server:start": "tsc --project tsconfig.server.json && node build/server/index.js",
+        "server:build": "tsc --skipLibCheck --project tsconfig.server.json",
         "server:dev": "nodemon",
         "server:build:launch": "node ./build-server/index.js"
     },
@@ -57,7 +57,6 @@
         "react-icons": "^4.12.0",
         "react-scripts": "5.0.1",
         "styled-components": "^6.1.8",
-        "ts-node-dev": "^2.0.0",
         "typesafe-actions": "^5.1.0",
         "web-vitals": "^2.1.4"
     },
@@ -80,6 +79,8 @@
         "nodemon": "^3.0.2",
         "prettier": "3.2.5",
         "react-router-dom": "^6.22.1",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
         "typescript": "~4.1.5"
     }
 }
