--- a/client/package.json
+++ b/client/package.json
@@ -24,19 +24,28 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.9.3",
+    "styled-components": "^6.1.13",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^18.11.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/uuid": "^9.0.0"
+    "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^9.0.0",
+    "eslint": "^8.57.1",
+    "ts-node-dev": "^2.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.13.0"
   }
 }
