--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.0",
     "styled-components": "^6.1.13",
     "uuid": "^9.0.0"
@@ -40,6 +41,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.0",
     "eslint": "^8.57.1",
