--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,26 @@ orbs:
   # See the Node orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@5.2
 
+jobs:
+   build:
+     docker:
+       - image: circleci/node:20.15.1
+     steps:
+      - checkout
+      - run: npm install --prefix ./client
+      - run: npm install --prefix ./server
+
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+  tests: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
+      - build:
+          filters:
+            branches:
+              only:
+               - master
       - node/test:
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
