--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,11 @@ orbs:
 
 jobs:
    build:
-     docker:
-       - image: circleci/node:20.15.1
-     steps:
+    executor: node/default # use the default executor defined within the orb
+    steps:
       - checkout
+      - node/install-packages:
+        pkg-manager: npm
       - run: npm install --prefix ./client
       - run: npm install --prefix ./server
 
