--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
       - checkout
       - node/install-packages:
         pkg-manager: npm
-      - run: npm install --prefix ./client
-      - run: npm install --prefix ./server
+      - run: cd client && npm install --prefix ./client
+      - run: cd .. && cd server && npm install --prefix ./server
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
