--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,16 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/orb-intro/
 orbs:
-  # See the Node orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@5.2
 
 jobs:
    build:
-    executor: node/default # use the default executor defined within the orb
+    executor: node/default
     steps:
       - checkout
-      - node/install-packages:
-        pkg-manager: npm
-      - run: cd client && npm install --prefix ./client
-      - run: cd .. && cd server && npm install --prefix ./server
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  tests: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  tests:
     jobs:
       - build:
           filters:
