Add sample npm install #3

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
     steps:
       - checkout
       - run: echo "Running build for server application"
-      - run: cd server
-      - run: npm install
+      - run: npm install --prefix ./server
 
 workflows:
   tests:
