Add example test for client app

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,10 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "12.1.5",
+        "@testing-library/react-hooks": "^8.0.1",
+        "@testing-library/user-event": "^13.5.0",
         "@eslint/js": "^9.14.0",
         "@types/eslint__js": "^8.42.3",
         "@types/node": "^18.11.9",
