--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - run: echo "Running build for server application"
       - run: npm install --prefix ./server
       - run: npm run test --prefix ./server
+      - run: npm run bild --prefix ./server
    build_client:
     executor: node/default
     steps:
@@ -18,6 +19,7 @@ jobs:
       - run: echo "Running build for client application"
       - run: npm install --prefix ./client
       - run: npm run test --prefix ./client
+      - run: npm run build --prefix ./client
 
 workflows:
   tests:
