--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run: echo "Running build for server application"
       - run: npm install --prefix ./server
       - run: npm run test --prefix ./server
-      - run: npm run bild --prefix ./server
+      - run: npm run build --prefix ./server
    build_client:
     executor: node/default
     steps:
