--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,11 @@
     "scripts": {
         "start": "set PORT=8080 && react-scripts start",
         "build:prod:win": "set \"REACT_APP_ENVIRONMENT=production\" && set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
-        "build:prod:linux": "\"REACT_APP_ENVIRONMENT=production\" \"GENERATE_SOURCEMAP=false\" react-scripts build",
+        "build:prod:linux": "REACT_APP_ENVIRONMENT=production GENERATE_SOURCEMAP=false react-scripts build",
         "build:dev:win": "set \"REACT_APP_ENVIRONMENT=development\" && react-scripts build",
-        "build:dev:linux": "\"REACT_APP_ENVIRONMENT=development\" react-scripts build",
+        "build:dev:linux": "REACT_APP_ENVIRONMENT=development react-scripts build",
         "build:local:win": "set \"REACT_APP_ENVIRONMENT=localhost\" && react-scripts build",
-        "build:local:linux": "\"REACT_APP_ENVIRONMENT=localhost\" react-scripts build",
+        "build:local:linux": "REACT_APP_ENVIRONMENT=localhost react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
