--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
         "build:local:win": "set \"REACT_APP_ENVIRONMENT=localhost\" && react-scripts build",
         "build:local:linux": "REACT_APP_ENVIRONMENT=localhost react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "eslint": "npx  eslint ."
     },
     "eslintConfig": {
         "extends": "react-app"
