--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,24 +29,16 @@ jobs:
       - run: npm run build:dev:linux --prefix ./client
 
 workflows:
-  tests:
+  tm-workflow:
     jobs:
-      - build_server:
-          filters:
-            branches:
-              only:
-               - development
+      - build_server
       - build_client:
           requires:
             - build_server
-          filters:
-            branches:
-              only:
-               - development
       - build_deploy:
           requires:
             - build_client
           filters:
             branches:
               only:
-               - development
+                - development
