--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,17 @@ workflows:
   tm-workflow:
     jobs:
       - build_server
+          filters:
+            branches:
+              only:
+                - development
       - build_client:
           requires:
             - build_server
+          filters:
+            branches:
+              only:
+                - development
       - build_deploy:
           requires:
             - build_client
