--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,11 @@ jobs:
 workflows:
   tm-workflow:
     jobs:
-      - build_server
-          filters:
-            branches:
-              only:
-                - development
+      - build_server:
+        filters:
+          branches:
+            only:
+             - development
       - build_client:
           requires:
             - build_server
