--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,11 @@
         "@types/styled-components": "^5.1.34",
         "@types/uuid": "^9.0.0",
         "eslint": "^8.57.1",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-promise": "^6.6.0",
+        "eslint-plugin-react-hooks": "^5.0.0",
         "ts-node-dev": "^2.0.0",
         "tslint": "^6.1.3",
         "typescript": "^4.9.5",
