--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
         "dotenv": "^16.4.5",
+        "mysql2": "^3.11.4",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1"
     },
@@ -33,7 +34,7 @@
         "@nestjs/testing": "^10.0.0",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.2",
-        "@types/node": "^20.3.1",
+        "@types/node": "^20.17.6",
         "@types/supertest": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^8.0.0",
         "@typescript-eslint/parser": "^8.0.0",
