--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "@nestjs/config": "^3.3.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/serve-static": "^4.0.2",
         "@nestjs/typeorm": "^10.0.2",
         "mysql2": "^3.11.4",
         "reflect-metadata": "^0.2.0",
